Form and Testimonials updated

--- a/index.html
+++ b/index.html
@@ -22,7 +22,9 @@
     <section class="top-bar">
         <div class="container">
             <div class="d-flex align-items-center justify-content-between">
-                <img src="images/logo-white.jpeg" class="logo">
+                <a href="https://sharpsight.in/" target="_blank">
+                    <img src="images/logo-white.jpeg" class="logo">
+                </a>
 
                 <div class=" top-bar-buton">
                     <button class="theme-btn" data-target="#myModal" data-toggle="modal" type="button">
@@ -96,7 +98,7 @@
                 <div class="col-md-4">
                     <div class="image-box">
                         <img src="images/surgeons.webp">
-                        <h3>Latest procedures</h3>
+                        <h3>Latest Procedures</h3>
                     </div>
                 </div>
                 <div class="col-md-4">
@@ -108,7 +110,7 @@
                 <div class="col-md-4">
                     <div class="image-box">
                         <img src="images/microscope1.webp">
-                        <h3>15 minutes procedure</h3>
+                        <h3>15 Minutes Procedure</h3>
 
                     </div>
                 </div>
@@ -246,7 +248,7 @@
     <section class="book_now_section">
         <div class="container">
             <div class="row g-4">
-                <div class="col-md-6">
+                <div class="col-lg-6">
                     <div class="bookform">
                         <h3>
                             At Sharp Sight Eye Hospital, We Offer The Latest Lasik Procedure For Specs Removal
@@ -261,16 +263,16 @@
                                     placeholder="Enter Mobile No." required="" type="tel" />
                             </div>
                             <div class="form-group">
-                                <input type="email" name="email_id" class="form-control" id="email_id" placeholder="Enter Email Address" required="">
-                              </div>
-                            <div class="form-group">
-                                <select class="form-select" name="user_city" aria-label="Default select example">
-                                    <option selected>Select City</option>
-                                    <option value="Delhi-NCR">Delhi NCR</option>
-                                    <option value="Srinagar">Srinagar</option>
+                    <input type="email" class="form-control" name="email_id" id="email_id" placeholder="Enter Email Address" required="">
+                  </div>
+                            <!--<div class="form-group">-->
+                            <!--    <select class="form-select" aria-label="Default select example" name="city">-->
+                            <!--        <option selected>Select City</option>-->
+                            <!--        <option value="1">Delhi NCR</option>-->
+                            <!--        <option value="2">Srinagar</option>-->
 
-                                </select>
-                            </div>
+                            <!--    </select>-->
+                            <!--</div>-->
                             <div class="form-group">
                                 <textarea class="form-control" id="cistomer_query" name="customer_query"
                                     placeholder="Your Query"></textarea>
@@ -282,7 +284,7 @@
                         </form>
                     </div>
                 </div>
-                <div class="col-md-6">
+                <div class="col-lg-6">
                     <h2 class="ff text-white mb-3">Book An Appointment</h2>
                     <h3 class="text-white book-number">+91 9641-919191</h3>
                     <img src="images/Before-Lasik.webp" class="book-image">
@@ -295,118 +297,42 @@
     <!-- Testimonial Start -->
     <section class="testimonial_section">
         <div class="container">
-            <div class="row g-4 mb-5">
-                <div class="col-md-6 text-center">
-                    <img src="images/image2.png" class="test_image">
-                </div>
-                <div class="col-md-6 align-self-center">
-                    <h4 class="ff">Testimonial</h4>
-                    <h2 class="ff mb-3">What They Say About Sharp Sight</h2>
-                    <div class="testimonial-slider mt-4">
-                        <div class="container">
-                            <div id="mycarousel" class="carousel slide" data-bs-ride="carousel">
-                                <div class="carousel-inner">
-                                    <div class="carousel-item active">
-                                        <div class="row">
-                                            <div class="col-lg-12 ">
-                                                <div class=" d-flex flex-column justify-content-center px-3">
-                                                    <p class="review text-center">"I have visited this hospital with my
-                                                        Grandmaa for her Cataract Problem. Consulted by Dr. Samir Sud.
-                                                        Very humble and understanding doctor. The staff here is also
-                                                        excellent. Hygiene and cleanliness was also maintained properly.
-                                                        Overall experience here was very good."</p>
-                                                    <div class="name d-flex align-items-center justify-content-center">
-                                                        <span class="fa fa-minus pe-1"></span>
-                                                        <p class="m-0">Vandana Jolly</p>
-                                                    </div>
-
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </div>
-                                    <div class="carousel-item">
-                                        <div class="row">
-                                            <div class="col-lg-12 ">
-                                                <div class=" d-flex flex-column justify-content-center px-3">
-                                                    <p class="review text-center">"My mother was here for her cataract
-                                                        surgery. The facility at this Hospital is just amazing. The
-                                                        doctors are well experienced and the staff is all very
-                                                        cooperative and compassionate. "</p>
-                                                    <div class="name d-flex align-items-center justify-content-center">
-                                                        <span class="fa fa-minus pe-1"></span>
-                                                        <p class="m-0">Arunabh Jain</p>
-                                                    </div>
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </div>
-                                    <div class="carousel-item">
-                                        <div class="row">
-                                            <div class="col-lg-12">
-                                                <div class=" d-flex flex-column justify-content-center px-3">
-                                                    <p class="review text-center">"I am fully satisfied with all
-                                                        services at Sharp Sight Eye Hospitals (Place). My both eye
-                                                        cataract surgery done by Dr (NAME). I would like to thank all
-                                                        the staff and doctors who treated me like their families. "</p>
-                                                    <div class="name d-flex align-items-center justify-content-center">
-                                                        <span class="fa fa-minus pe-1"></span>
-                                                        <p class="m-0">Sobha Rani</p>
-                                                    </div>
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </div>
-                                    <div class="carousel-item">
-                                        <div class="row">
-                                            <div class="col-lg-12">
-                                                <div class=" d-flex flex-column justify-content-center px-3">
-                                                    <p class="review text-center">"I have visited this hospital with my
-                                                        Grandmaa for her Cataract Problem. Consulted by Dr. Kamal Very
-                                                        humble and understanding doctor. The staff here is also
-                                                        excellent. Hygiene and cleanliness was also maintained properly.
-                                                        Overall experience here was very good."</p>
-                                                    <div class="name d-flex align-items-center justify-content-center">
-                                                        <span class="fa fa-minus pe-1"></span>
-                                                        <p class="m-0">Vishal Grover</p>
-                                                    </div>
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="row gy-4">
-                <div class="col-xl-3 col-md-6 col-12">
+         <div class="row"><div class="col-lg-10"> <h4 class="ff">Testimonial</h4>
+            <h2 class="ff mb-3"> What Patients Say About Sharp Sight</h2></div></div>
+            <div class="row gy-4 mt-4">
+                <div class="col-lg-4 col-md-6 ">
                     <iframe width="100%" height="280"
                         src="https://www.youtube.com/embed/tBrYJvW0yzI?si=h9rXL_OIfcuRrpR-" title="YouTube video player"
                         frameborder="0"
                         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                         referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
                 </div>
-                <div class="col-xl-3 col-md-6 col-12">
+                <div class="col-lg-4 col-md-6 ">
                     <iframe width="100%" height="280"
                         src="https://www.youtube.com/embed/dmVW-N4DRx0?si=BW6ftr3QlhAkMlQw" title="YouTube video player"
                         frameborder="0"
                         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                         referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
                 </div>
-                <div class="col-xl-3 col-md-6 col-12">
+                <div class="col-lg-4 col-md-6 ">
                     <iframe width="100%" height="280"
                         src="https://www.youtube.com/embed/z6GIGbH5Qjc?si=VTsgT0q2Xya9K2PY" title="YouTube video player"
                         frameborder="0"
                         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                         referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
                 </div>
-                <div class="col-xl-3 col-md-6 col-12">
+                <div class="col-lg-4 col-md-6 ">
                     <iframe width="100%" height="280"
                         src="https://www.youtube.com/embed/-p_3Sr-6OZE?si=FHPut1jO-4Kg9U-u" title="YouTube video player"
                         frameborder="0"
                         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                         referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                </div>
+                <div class="col-lg-4 col-md-6 ">
+                    <iframe width="100%" height="280" src="https://www.youtube.com/embed/u3pY2d5RVTA?si=aGLYNpETUHfvMSlg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                </div>
+                <div class="col-lg-4 col-md-6 ">
+                    <iframe width="100%" height="280" src="https://www.youtube.com/embed/crx0aeQIwCs?si=YLZ90XPcmJ9507hE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
                 </div>
             </div>
         </div>
@@ -456,21 +382,21 @@
     <section id="counter_sec" class="xs-width">
         <div class="container">
             <div class="row g-4">
-                <div class="col-md-5 text-center">
+                <div class="col-lg-5 text-center align-self-center">
                     <img src="images/image2.png" class="test_image">
                 </div>
-                <div class="col-md-7">
-                    <div class="row">
-                        <div class="col-lg-6">
-                            <div class="four mb-4 ">
+                <div class="col-lg-7">
+                    <div class="row g-4">
+                        <div class="col-sm-6">
+                            <div class="four ">
                                 <div class="counter-box"> <i class="fa fa-smile-o" aria-hidden="true"></i> <span
                                         class="counter">500000</span>
                                     <p>Eye Surgeries</p>
                                 </div>
                             </div>
                         </div>
-                        <div class="col-lg-6">
-                            <div class="four ">
+                        <div class="col-sm-6">
+                            <div class="four mb-4">
                                 <div class="counter-box"><i class="fa fa-eye" aria-hidden="true"></i><span
                                         class="counter">24 </span>
                                     <p>Eye Treatments</p>
@@ -479,7 +405,7 @@
                         </div>
                     </div>
                     <div class="row">
-                        <div class="col-lg-6">
+                        <div class="col-sm-6">
                             <div class="four mb-4">
                                 <div class="counter-box"> <i class="fa fa-user-md" aria-hidden="true"></i> <span
                                         class="counter">50 </span>
@@ -487,8 +413,8 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-lg-6">
-                            <div class="four">
+                        <div class="col-sm-6">
+                            <div class="four mb-4">
                                 <div class="counter-box"> <i class="fa fa-hospital-o" aria-hidden="true"></i> <span
                                         class="counter">16</span>
                                     <p>Hospitals</p>
@@ -721,16 +647,17 @@
                                 placeholder="Enter Mobile No." required="" type="tel" />
                         </div>
                         <div class="form-group">
-                            <input type="email" name="email_id" class="form-control" id="email_id" placeholder="Enter Email Address" required="">
-                          </div>
-                        <div class="form-group">
-                            <select class="form-select" name="user_city" aria-label="Default select example">
-                                <option selected>Select City</option>
-                                <option value="Delhi-NCR">Delhi NCR</option>
-                                <option value="Srinagar">Srinagar</option>
+                    <input type="email" class="form-control" name="email_id" id="email_id" placeholder="Enter Email Address" required="">
+                  </div>
 
-                            </select>
-                        </div>
+                        <!--<div class="form-group">-->
+                        <!--    <select class="form-select" name="city" aria-label="Default select example">-->
+                        <!--        <option selected>Select City</option>-->
+                        <!--        <option value="1">Delhi NCR</option>-->
+                        <!--        <option value="2">Srinagar</option>-->
+
+                        <!--    </select>-->
+                        <!--</div>-->
                         <div class="form-group">
                             <textarea class="form-control" id="cistomer_query" name="customer_query"
                                 placeholder="Your Query"></textarea>
@@ -772,5 +699,7 @@
         });
     </script>
 
+
 </body>
+
 </html>
